--- a/pages/content/amp-dev/documentation/tutorial-p/888/102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/888/102.md
@@ -6,16 +6,24 @@ $order: 2
 
 ## toc: true
 
-### links
+### inline markup
 
-  Here is my [Homepage][MichaelCurrin home] example 1
+I need to highlight these <mark>very important words</mark>.
 
-  [Here][MichaelCurrin home] is my example 2
+I need to highlight these ``very important words``.
 
-  Here is my [Homepage][1] with a numbered reference.
+<pre>
+I need to highlight these very important words.
+</pre>
 
 
-#### *How should URIs be assigned to a group of resources that form a natural hierarchy?*
+### testing comments using triple dash (success)
+
+<!---
+your comment goes here
+and here
+--->
+
 
 ### g.doc #1
 
@@ -30,12 +38,12 @@ $order: 2
 ### g.doc #2
 
 <div class="ap-m-biggy-aside">
-{% set markdown_content = g.doc('/content/amp-dev/documentation/tutorial-p/999/file.md').content %}
-{{ markdown_content | safe }}
+  {% set markdown_content = g.doc('/content/amp-dev/documentation/tutorial-p/999/file.md').content %}
+  {{ markdown_content | safe }}
+</div>
 
 
 ### g.doc #3
-
 
 <div class="ap-m-biggy-aside">
   {% do doc.styles.addCssFile('css/components/molecules/code-snippet.css') %}
@@ -87,37 +95,3 @@ $order: 2
    </td>
   </tr>
 </table>
-
-
-### inline markup
-
-I need to highlight these <mark>very important words</mark>.
-
-I need to highlight these ``very important words``.
-
-<pre>
-I need to highlight these very important words.
-</pre>
-
-
-### horizontal rule
-
-***
-
-
-### testing comments using triple dash (success)
-
-<!---
-your comment goes here
-and here
---->
-
-
-### reference links (not visible!)
-
-[MichaelCurrin home]: https://michaelcurrin.github.io/
-
-[1]: https://michaelcurrin.github.io/
-
-[Homepage]: https://michaelcurrin.github.io/
-
