testing html elements from yaml

--- a/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
@@ -17,5 +17,6 @@ tutorial: !g.yaml /shared/data/tutorial-p.yaml
 <p class="">{{ v.heading_2 | safe }}</p>
 <p class="">{{ v.text_1 | trim }}</p>
 <p class="">{{ v.text_2 | trim }}</p>
+<p class="">{{ v.text_3 | safe }}</p>
 {% endfor %}
 
