--- a/pages/content/amp-dev/documentation/tutorial-p/888/102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/888/102.md
@@ -16,6 +16,9 @@ I need to highlight these ``very important words``.
 I need to highlight these very important words.
 </pre>
 
+<code>
+I need to highlight these very important words.
+</code>
 
 ### testing comments using triple dash (success)
 
