--- a/pages/content/amp-dev/documentation/tutorial-p/888/102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/888/102.md
@@ -12,13 +12,10 @@ I need to highlight these <mark>very important words</mark>.
 
 I need to highlight these ``very important words``.
 
-<pre>
-I need to highlight these very important words.
-</pre>
+I need to highlight these <code>very important words</code>.
 
-<code>
-I need to highlight these very important words.
-</code>
+I need to highlight these <pre>very important words</pre>.
+
 
 ### testing comments using triple dash (success)
 
