--- a/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
@@ -4,12 +4,12 @@ description@: ''
 $order: 2
 teaser:
   text: >-
-    The `amp-layout` component allows you to apply aspect-ratio based responsive
-    layouts to any element. The `amp-layout` component works similarly to the
+    The <code>amp-layout</code> component allows you to apply aspect-ratio based responsive
+    layouts to any element. The amp-layout component works similarly to the
     layout.
 ---
 
-## frontmatter substitution (inline `` may fail)
+## frontmatter substitution
 
 <div class="teaser">
   <p>{{ doc.teaser.text }}</p>
