--- a/pages/content/amp-dev/documentation/tutorial-h/888/105.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/105.md
@@ -10,6 +10,32 @@ components:
 ## amp-story
 
 {% do doc.amp_dependencies.add('amp-story', '1.0') %}
+<head>
+  <style amp-custom>
+    :root {
+      --color-primary: #005AF0;
+      --color-text-light: #fff;
+    }
+    amp-story-page {
+      font-family: 'Roboto', sans-serif;
+      background: var(--color-text-light);
+    }
+    amp-story-grid-layer {
+      align-items: center;
+      justify-items: center;
+    }
+    .square,
+    .circle {
+      background: var(--color-primary);
+      width: 96px;
+      height: 96px;
+    }
+    .circle {
+      border-radius: 80px;
+    }
+    </style>
+</head>
+<body>
   <amp-story standalone
     title="Stories in AMP - Animations"
     publisher="AMP Project"
