--- a/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
@@ -4,7 +4,7 @@ description@: ''
 $order: 2
 teaser:
   text: >-
-    The <code>amp-layout</code> component allows you to apply aspect-ratio based responsive
+    The amp-layout component allows you to apply aspect-ratio based responsive
     layouts to any element. The amp-layout component works similarly to the
     layout.
 ---
