--- a/pages/content/amp-dev/documentation/tutorial-h/888/105.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/105.md
@@ -7,8 +7,6 @@ components:
   - story
 ---
 
-## amp-story
-
 {% do doc.amp_dependencies.add('amp-story', '1.0') %}
 <head>
   <style amp-custom>
@@ -17,7 +15,6 @@ components:
       --color-text-light: #fff;
     }
     amp-story-page {
-      font-family: 'Roboto', sans-serif;
       background: var(--color-text-light);
     }
     amp-story-grid-layer {
@@ -36,257 +33,33 @@ components:
     </style>
 </head>
 <body>
-  <amp-story standalone
-    title="Stories in AMP - Animations"
-    publisher="AMP Project"
-    publisher-logo-src="https://amp.dev/favicons/coast-228x228.png"
-    poster-portrait-src="https://picsum.photos/300/400"
-    poster-square-src="https://picsum.photos/300/300"
-    poster-landscape-src="https://picsum.photos/400/300">
-    <amp-story-page id="fade-in">
-      <amp-story-grid-layer template="thirds">
-        <h1>fade-in</h1>
-        <div class="square"
-            animate-in="fade-in"
-            animate-in-duration="2s">
-        </div>
-      </amp-story-grid-layer>
-    </amp-story-page>
+<amp-story standalone supports-landscape
+  title="Stories in AMP - Hello World"
+  publisher="AMP Project"
+  publisher-logo-src="https://amp.dev/favicons/coast-228x228.png"
+  poster-portrait-src="https://amp.dev/static/samples/img/story_dog2_portrait.jpg"
+  poster-square-src="https://amp.dev/static/samples/img/story_dog2_square.jpg"
+  poster-landscape-src="https://amp.dev/static/samples/img/story_dog2_landscape.jpg">
 
-    <amp-story-page id="delay-duration">
-      <amp-story-grid-layer template="thirds">
-        <h1>Wait for it ...</h1>
-        <div class="square"
-            animate-in="fade-in"
-            animate-in-delay="2s"
-            animate-in-duration="5s">
-        </div>
-      </amp-story-grid-layer>
-    </amp-story-page>
-
-    <amp-story-page id="sequence">
-      <amp-story-grid-layer template="vertical">
-        <amp-img  id="image1"
-                  animate-in="fade-in"
-                  animate-in-delay="1s"
-                  animate-in-duration="1s"
-                  src="https://unsplash.it/720/320/?image=10"
-                  width="720"
-                  height="320"
-                  layout="responsive"
-                  alt="..."></amp-img>
-        <amp-img  id="image2"
-                  animate-in="fade-in"
-                  animate-in-duration="1s"
-                  animate-in-delay="0.25s"
-                  animate-in-after="image1"
-                  src="https://unsplash.it/720/320/?image=11"
-                  width="720"
-                  height="320"
-                  layout="responsive"
-                  alt="..."></amp-img>
-        <amp-img  id="image3"
-                  animate-in="fade-in"
-                  animate-in-duration="1s"
-                  animate-in-delay="0.25s"
-                  animate-in-after="image2"
-                  src="https://unsplash.it/720/320/?image=12"
-                  width="720"
-                  height="320"
-                  layout="responsive"
-                  alt="..."></amp-img>
-        <amp-img  id="image4"
-                  animate-in="fade-in"
-                  animate-in-duration="1s"
-                  animate-in-delay="0.25s"
-                  animate-in-after="image3"
-                  src="https://unsplash.it/720/320/?image=13"
-                  width="720"
-                  height="320"
-                  layout="responsive"
-                  alt="..."></amp-img>
-      </amp-story-grid-layer>
-    </amp-story-page>
-
-    <amp-story-page id="combining-animations">
-      <amp-story-grid-layer template="thirds">
-        <h1>fly-in-left + fade-in</h1>
-        <div animate-in="fly-in-left"
-             animate-in-duration="2s"
-             grid-area="middle-third">
-          <div class="square"
-               animate-in-duration="2s"
-               animate-in="fade-in">
-          </div>
-        </div>
-      </amp-story-grid-layer>
-    </amp-story-page>
-
-    <amp-story-page id="twirl-in">
-      <amp-story-grid-layer template="thirds">
-        <h1>twirl-in</h1>
-        <div class="square"
-            animate-in="twirl-in">
-        </div>
-      </amp-story-grid-layer>
-    </amp-story-page>
-
-    <amp-story-page id="fly-in-left">
-      <amp-story-grid-layer template="thirds">
-        <h1>fly-in-left</h1>
-        <div class="square"
-            animate-in="fly-in-left">
-        </div>
-      </amp-story-grid-layer>
-    </amp-story-page>
-
-    <amp-story-page id="fly-in-right">
-      <amp-story-grid-layer template="thirds">
-        <h1>fly-in-right</h1>
-        <div class="square"
-            animate-in="fly-in-right">
-        </div>
-      </amp-story-grid-layer>
-    </amp-story-page>
-
-    <amp-story-page id="fly-in-top">
-      <amp-story-grid-layer template="thirds">
-        <h1>fly-in-top</h1>
-        <div class="square"
-            animate-in="fly-in-top">
-        </div>
-      </amp-story-grid-layer>
-    </amp-story-page>
-
-    <amp-story-page id="fly-in-bottom">
-      <amp-story-grid-layer template="thirds">
-        <h1>fly-in-bottom</h1>
-        <div class="square"
-            animate-in="fly-in-bottom">
-        </div>
-      </amp-story-grid-layer>
-    </amp-story-page>
-
-    <amp-story-page id="rotate-in-left">
-      <amp-story-grid-layer template="thirds">
-        <h1>rotate-in-left</h1>
-        <div class="square"
-            animate-in="rotate-in-left">
-        </div>
-      </amp-story-grid-layer>
-    </amp-story-page>
-
-    <amp-story-page id="rotate-in-right">
-      <amp-story-grid-layer template="thirds">
-        <h1>rotate-in-right</h1>
-        <div class="square"
-            animate-in="rotate-in-right">
-        </div>
-      </amp-story-grid-layer>
-    </amp-story-page>
-
-    <amp-story-page id="drop-in">
-      <amp-story-grid-layer template="thirds">
-        <h1>drop-in</h1>
-        <div class="circle"
-             animate-in="drop">
-        </div>
-      </amp-story-grid-layer>
-    </amp-story-page>
-
-    <amp-story-page id="whoosh-in-left">
-      <amp-story-grid-layer template="thirds">
-        <h1>whoosh-in-left</h1>
-        <div class="square"
-            animate-in="whoosh-in-left">
-        </div>
-      </amp-story-grid-layer>
-    </amp-story-page>
-
-    <amp-story-page id="whoosh-in-right">
-      <amp-story-grid-layer template="thirds">
-        <h1>whoosh-in-right</h1>
-        <div class="square"
-            animate-in="whoosh-in-right">
-        </div>
-      </amp-story-grid-layer>
-    </amp-story-page>
-
-    <amp-story-page id="zoom-in">
-      <amp-story-grid-layer template="vertical">
-        <amp-img animate-in="zoom-in"
-                 animate-in-duration="4s"
-                 layout="responsive"
-                 src="https://picsum.photos/720/320?image=1026"
-                 width="720"
-                 height="320"
-                 alt="...">
-        </amp-img>
-      </amp-story-grid-layer>
-      <amp-story-grid-layer template="fill">
-        <h1>zoom-in</h1>
-      </amp-story-grid-layer>
-    </amp-story-page>
-
-    <amp-story-page id="zoom-out">
-      <amp-story-grid-layer template="vertical">
-        <amp-img animate-in="zoom-out"
-                 animate-in-duration="4s"
-                 layout="responsive"
-                 src="https://picsum.photos/720/320?image=1026"
-                 width="720"
-                 height="320"
-                 alt="...">
-        </amp-img>
-      </amp-story-grid-layer>
-      <amp-story-grid-layer template="fill">
-          <h1>zoom-out</h1>
-      </amp-story-grid-layer>
-    </amp-story-page>
-
-    <amp-story-page id="pan-left">
-        <amp-story-grid-layer template="fill">
-          <amp-img animate-in="pan-left" id="img-pan-left" animate-in-duration="4s" layout="fixed" src="https://picsum.photos/720/320?image=1026"
-            width="720" height="320" alt="...">
-          </amp-img>
-        </amp-story-grid-layer>
-        <amp-story-grid-layer template="fill">
-          <h1>pan-left</h1>
-        </amp-story-grid-layer>
-    </amp-story-page>
-
-    <amp-story-page id="pan-right">
-      <amp-story-grid-layer template="fill">
-        <amp-img animate-in="pan-right" animate-in-duration="4s" layout="fixed" src="https://picsum.photos/720/320?image=1026" width="720"
-          height="320" alt="...">
-        </amp-img>
-      </amp-story-grid-layer>
-      <amp-story-grid-layer template="fill">
-        <h1>pan-right</h1>
-      </amp-story-grid-layer>
-    </amp-story-page>
-
-    <amp-story-page id="pan-up">
-      <amp-story-grid-layer template="fill">
-        <amp-img animate-in="pan-up" animate-in-duration="4s" layout="fixed" src="https://picsum.photos/720/320?image=1026" width="720"
-          height="320" alt="...">
-        </amp-img>
-      </amp-story-grid-layer>
-      <amp-story-grid-layer template="fill">
-        <h1>pan-up</h1>
-      </amp-story-grid-layer>
-    </amp-story-page>
-
-    <amp-story-page id="pan-down">
-      <amp-story-grid-layer template="fill">
-        <amp-img animate-in="pan-down" animate-in-duration="4s" layout="fixed" src="https://picsum.photos/720/320?image=1026" width="720"
-          height="320" alt="...">
-        </amp-img>
-      </amp-story-grid-layer>
-      <amp-story-grid-layer template="fill">
-        <h1>pan-down</h1>
-      </amp-story-grid-layer>
-    </amp-story-page>
-
-  </amp-story>
+  <amp-story-page id="page-1">
+    <amp-story-grid-layer template="fill">
+      <amp-img src="https://amp.dev/static/samples/img/tree-1920x1277.jpg"
+      width="1920"
+      height="1277" layout="responsive"
+      alt="..."></amp-img>
+    </amp-story-grid-layer>
+  </amp-story-page>
+  <amp-story-page id="page-2">
+    <amp-story-grid-layer template="fill">
+      <amp-img src="https://amp.dev/static/samples/img/forest-1920x1280.jpg"
+      width="1920"
+      height="1280" layout="responsive"
+      alt="..."></amp-img>
+    </amp-story-grid-layer>
+  </amp-story-page>
+  <amp-story-bookend src="https://amp.dev/static/samples/json/bookend.json" layout="nodisplay">
+  </amp-story-bookend>
+</amp-story>
 </body>
+
+## new title here
