--- a/pages/content/amp-dev/documentation/tutorial-h/888/105.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/105.md
@@ -10,56 +10,92 @@ components:
 {% do doc.amp_dependencies.add('amp-story', '1.0') %}
 <head>
   <style amp-custom>
-    :root {
-      --color-primary: #005AF0;
-      --color-text-light: #fff;
-    }
-    amp-story-page {
-      background: var(--color-text-light);
-    }
-    amp-story-grid-layer {
-      align-items: center;
-      justify-items: center;
-    }
-    .square,
-    .circle {
-      background: var(--color-primary);
-      width: 96px;
-      height: 96px;
-    }
-    .circle {
-      border-radius: 80px;
-    }
+      amp-story-page * {
+        color: white;
+        text-align: center;
+      }
+      [template=thirds] {
+        padding: 0;
+      }
     </style>
 </head>
 <body>
-<amp-story standalone supports-landscape
-  title="Stories in AMP - Hello World"
-  publisher="AMP Project"
-  publisher-logo-src="https://amp.dev/favicons/coast-228x228.png"
-  poster-portrait-src="https://amp.dev/static/samples/img/story_dog2_portrait.jpg"
-  poster-square-src="https://amp.dev/static/samples/img/story_dog2_square.jpg"
-  poster-landscape-src="https://amp.dev/static/samples/img/story_dog2_landscape.jpg">
+   <amp-story standalone
+      title="Stories in AMP - Hello World"
+      publisher="AMP Project"
+      publisher-logo-src="https://amp.dev/favicons/coast-228x228.png"
+      poster-portrait-src="https://amp.dev/static/samples/img/story_dog2_portrait.jpg"
+      poster-square-src="https://amp.dev/static/samples/img/story_dog2_square.jpg"
+      poster-landscape-src="https://amp.dev/static/samples/img/story_dog2_landscape.jpg">
 
-  <amp-story-page id="page-1">
-    <amp-story-grid-layer template="fill">
-      <amp-img src="https://amp.dev/static/samples/img/tree-1920x1277.jpg"
-      width="1920"
-      height="1277" layout="responsive"
-      alt="..."></amp-img>
-    </amp-story-grid-layer>
-  </amp-story-page>
-  <amp-story-page id="page-2">
-    <amp-story-grid-layer template="fill">
-      <amp-img src="https://amp.dev/static/samples/img/forest-1920x1280.jpg"
-      width="1920"
-      height="1280" layout="responsive"
-      alt="..."></amp-img>
-    </amp-story-grid-layer>
-  </amp-story-page>
-  <amp-story-bookend src="https://amp.dev/static/samples/json/bookend.json" layout="nodisplay">
-  </amp-story-bookend>
-</amp-story>
+      <amp-story-page id="page-1">
+        <amp-story-grid-layer template="fill">
+          <amp-img src="https://amp.dev/static/samples/img/story_dog2.jpg"
+                   width="720" height="1280"
+                   layout="responsive">
+          </amp-img>
+        </amp-story-grid-layer>
+        <amp-story-grid-layer template="vertical">
+          <h1>Hello World</h1>
+          <p>This is an AMP Story.</p>
+        </amp-story-grid-layer>
+      </amp-story-page>
+
+      <amp-story-page id="page-2">
+        <amp-story-grid-layer template="fill">
+          <amp-video autoplay loop
+                width="720"
+                height="960"
+                poster="https://amp.dev/static/samples/img/story_video_dog_cover.jpg"
+                layout="responsive">
+                <source src="https://amp.dev/static/samples/video/story_video_dog.mp4" type="video/mp4">
+          </amp-video>
+        </amp-story-grid-layer>
+      </amp-story-page>
+
+      <amp-story-page id="animation-demo">
+        <amp-story-grid-layer template="fill">
+          <amp-img src="https://amp.dev/static/samples/img/story_dog4.jpg"
+                   animate-in="fly-in-top"
+                   width="720" height="1280"
+                   layout="responsive"
+                   alt="...">
+          </amp-img>
+        </amp-story-grid-layer>
+        <amp-story-grid-layer template="thirds">
+          <h2 animate-in="fly-in-bottom"
+              grid-area="lower-third"
+              animate-in-delay="0.4s">
+            Best walk ever!
+          </h2>
+        </amp-story-grid-layer>
+      </amp-story-page>
+
+      <amp-story-page id="layout-demo">
+        <amp-story-grid-layer template="thirds">
+          <amp-img grid-area="upper-third"
+                   src="https://amp.dev/static/samples/img/story_thirds_1.jpg"
+                   width="560" height="420"
+                   layout="responsive"
+                   alt="...">
+          </amp-img>
+          <amp-img grid-area="middle-third"
+                   src="https://amp.dev/static/samples/img/story_thirds_2.jpg"
+                   width="560" height="420"
+                   layout="responsive"
+                   alt="...">
+          </amp-img>
+          <amp-img grid-area="lower-third"
+                   src="https://amp.dev/static/samples/img/story_thirds_3.jpg"
+                   width="560"
+                   height="420"
+                   layout="responsive"
+                   alt="...">
+          </amp-img>
+        </amp-story-grid-layer>
+      </amp-story-page>
+
+    </amp-story>
 </body>
 
 ## new title here
