--- a/pages/content/amp-dev/documentation/tutorial-h/888/105.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/105.md
@@ -3,14 +3,15 @@ $title: amp-story
 description: testing amp-story
 $order: 5
 toc: false
-components:
-  - story
 ---
 
 {% do doc.amp_dependencies.add('amp-story', '1.0') %}
 <head>
   <style amp-custom>
-      amp-story-page * {
+      body {
+	    height: 80%;
+	  }
+	  amp-story-page * {
         color: white;
         text-align: center;
       }
