--- a/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
@@ -13,7 +13,7 @@ teaser:
 ## frontmatter substitution
 
 <div class="teaser">
-  <p>{{ _(doc.teaser.text) }}</p>
+  <p>{{ doc.teaser.text }}</p>
 </div>
 
 ## local locale
