--- a/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
@@ -1,43 +1,17 @@
 ---
-$title@: Solve problems on the right layer.
-description@: 'Solve problems on the right layer.'
+$title@: Layout
+description@: ''
 $order: 2
 teaser:
   text: >-
-    Web Stories provide content publishers with a mobile-focused format for
-    delivering news and information as visually rich, tap-through stories.
-    Web Stories offers a robust set of advertising opportunities for advertisers 
-    and publishers to reach a unique audience on the web with immersive experiences.
+    The amp-layout component allows you to apply aspect-ratio based responsive
+    layouts to any element. The amp-layout component works similarly to the
+    layout.
 ---
 
 ## frontmatter substitution
 
 <div class="teaser">
-  <p>{{ doc.teaser.text }}</p>
+  <p>{{ _(doc.teaser.text) }}</p>
 </div>
-
-## local locale
-
-<p>{{ Third-party JS likes to use synchronous JS loading. They also like to <code>document.write</code> more sync scripts. For example, if you have five ads on your page, and each of them cause three synchronous loads, each with a 1 second latency connection, you’re in 15 seconds of load time just for JS loading. }}</p>
-
-
-## collapsible text
-
-<details>
-  <summary>Click me</summary>
-  
-  ### Heading
-  1. Foo
-  2. Bar
-     * Baz
-     * Qux
-
-  ### Some Javascript
-  ```js
-  function logSomething(something) {
-    console.log('Something', something);
-  }
-  ```
-</details>
-
 
