--- a/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
@@ -1,6 +1,6 @@
 ---
-$title@: Layout
-description@: ''
+$title@: Tell a story
+description@: 'Tell a story'
 $order: 2
 teaser:
   text: >-
@@ -15,3 +15,21 @@ teaser:
   <p>{{ _(doc.teaser.text) }}</p>
 </div>
 
+## collapsible text
+
+<details>
+  <summary>Click me</summary>
+  
+  ### Heading
+  1. Foo
+  2. Bar
+     * Baz
+     * Qux
+
+  ### Some Javascript
+  ```js
+  function logSomething(something) {
+    console.log('Something', something);
+  }
+  ```
+</details>
