--- a/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
@@ -3,10 +3,8 @@ $title@: Tell a story
 description@: 'Tell a story'
 $order: 2
 teaser:
-  text: >-
-    The amp-layout component allows you to apply aspect-ratio based responsive
-    layouts to any element. The amp-layout component works similarly to the
-    layout.
+  text@: >-
+    Immerse readers in visual and tappable stories they can share anywhere on the open web.
 ---
 
 ## frontmatter substitution
@@ -20,13 +18,11 @@ teaser:
 <details>
   <summary>Click me</summary>
   
-  ### Heading
   1. Foo
   2. Bar
      * Baz
      * Qux
 
-  ### Some Javascript
   ```js
   function logSomething(something) {
     console.log('Something', something);
