--- a/pages/content/amp-dev/documentation/tutorial-h/888/105.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/105.md
@@ -6,6 +6,7 @@ toc: false
 ---
 
 {% do doc.amp_dependencies.add('amp-story', '1.0') %}
+<head>
   <style amp-custom>
         amp-story-page * {
         color: white;
@@ -14,8 +15,10 @@ toc: false
       [template=thirds] {
         padding: 0;
       }
-  </style>
-  <amp-story standalone
+    </style>
+</head>
+<body style="height: 90%;">
+   <amp-story standalone
       title="Stories in AMP - Hello World"
       publisher="AMP Project"
       publisher-logo-src="https://amp.dev/favicons/coast-228x228.png"
@@ -89,6 +92,7 @@ toc: false
           </amp-img>
         </amp-story-grid-layer>
       </amp-story-page>
-  </amp-story>
+    </amp-story>
+</body>
 
 ## new title here
