--- a/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
@@ -7,7 +7,7 @@ teaser:
     Immerse readers in visual and tappable stories they can share anywhere on the open web.
 ---
 
-## frontmatter substitution
+## frontmatter substitution SUCCESS
 
 <div class="teaser">
   <p>{{ _(doc.teaser.text) }}</p>
@@ -16,16 +16,20 @@ teaser:
 ## collapsible text
 
 <details>
-  <summary>Click me</summary>
+<summary>Click me</summary>
   
-  1. Foo
-  2. Bar
-     * Baz
-     * Qux
+1. Foo
 
-  ```js
-  function logSomething(something) {
-    console.log('Something', something);
-  }
-  ```
+2. Bar
+
+  * Baz
+
+  * Qux
+
+  [sourcecode:js]
+    function logSomething(something) {
+      console.log('Something', something);
+    }
+  [sourcecode]
+
 </details>
