--- a/pages/content/amp-dev/documentation/tutorial-h/888/105.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/105.md
@@ -6,6 +6,7 @@ toc: false
 ---
 
 {% do doc.amp_dependencies.add('amp-story', '1.0') %}
+
 <head>
   <style amp-custom>
         amp-story-page * {
@@ -17,8 +18,9 @@ toc: false
       }
     </style>
 </head>
-<body style="height: 90%;">
-   <amp-story standalone
+
+<body style="height: 110vh;">
+   <amp-story standalone supports-landscape
       title="Stories in AMP - Hello World"
       publisher="AMP Project"
       publisher-logo-src="https://amp.dev/favicons/coast-228x228.png"
