--- a/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
@@ -18,13 +18,13 @@ teaser:
 <details>
 <summary>Click me</summary>
   
-1. Foo
-
-2. Bar
-
-  * Baz
-
-  * Qux
+  1. Foo
+  
+  2. Bar
+  
+    * Baz
+  
+    * Qux
 
   [sourcecode:js]
     function logSomething(something) {
@@ -33,3 +33,13 @@ teaser:
   [sourcecode]
 
 </details>
+
+
+## source code
+
+[sourcecode:js]
+  function logSomething(something) {
+    console.log('Something', something);
+  }
+[sourcecode]
+
