--- a/pages/content/amp-dev/documentation/tutorial-h/888/105.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/105.md
@@ -19,7 +19,7 @@ toc: false
     </style>
 </head>
 
-<body style="height: 110vh;">
+<body style="height: 200vh;overflow: scroll;">
    <amp-story standalone supports-landscape
       title="Stories in AMP - Hello World"
       publisher="AMP Project"
