--- a/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
@@ -18,22 +18,9 @@ teaser:
 <details>
 <summary>Click me</summary>
   
-  1. Foo
-  
-  2. Bar
-  
-    * Baz
-  
-    * Qux
+<div class="teaser">
+  <p>{{ _(doc.teaser.text) }}</p>
+</div>
 
 </details>
-
-
-## source code
-
-```js
-  function logSomething(something) {
-    console.log('Something', something);
-  }
-```
 
