--- a/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
@@ -16,11 +16,10 @@ teaser:
 ## collapsible text
 
 <details>
-<summary>Click me</summary>
+<summary>Click to see FM content</summary>
   
 <div class="teaser">
   <p>{{ _(doc.teaser.text) }}</p>
 </div>
 
 </details>
-
