--- a/pages/content/amp-dev/documentation/tutorial-h/888/105.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/105.md
@@ -3,12 +3,17 @@ $title: amp-story
 description: testing amp-story
 $order: 5
 toc: false
+components:
+  - story
 ---
 
-{% do doc.amp_dependencies.add('amp-story', '1.0') %}
+{% do doc.amp_dependencies.add('amp-story', '0.1') %}
 
 <head>
   <style amp-custom>
+        amp-story-page {
+        height: 100%;
+      }
         amp-story-page * {
         color: white;
         text-align: center;
@@ -19,8 +24,8 @@ toc: false
     </style>
 </head>
 
-<body style="height: 200vh;overflow: scroll;">
-   <amp-story standalone supports-landscape
+<body>
+   <amp-story standalone
       title="Stories in AMP - Hello World"
       publisher="AMP Project"
       publisher-logo-src="https://amp.dev/favicons/coast-228x228.png"
@@ -76,20 +81,20 @@ toc: false
           <amp-img grid-area="upper-third"
                    src="https://amp.dev/static/samples/img/story_thirds_1.jpg"
                    width="560" height="420"
-                   layout="responsive"
+                   layout="intrinsic"
                    alt="...">
           </amp-img>
           <amp-img grid-area="middle-third"
                    src="https://amp.dev/static/samples/img/story_thirds_2.jpg"
                    width="560" height="420"
-                   layout="responsive"
+                   layout="intrinsic"
                    alt="...">
           </amp-img>
           <amp-img grid-area="lower-third"
                    src="https://amp.dev/static/samples/img/story_thirds_3.jpg"
                    width="560"
                    height="420"
-                   layout="responsive"
+                   layout="intrinsic"
                    alt="...">
           </amp-img>
         </amp-story-grid-layer>
