--- a/pages/content/amp-dev/documentation/tutorial-h/888/106.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/106.md
@@ -1290,10 +1290,10 @@ components:
     </g>
   </g>
   <g id="Layer_Text" data-name="Layer Text">
-{{#items}}
-    <text class="cls-121" transform="translate(99.32 563.99)">{{101}}</text>
-    <text class="cls-122" transform="translate(99.32 599.05)">{{102}}</text>
-{{/items}}
+
+    <text class="cls-121" transform="translate(99.32 563.99)">text-101</text>
+    <text class="cls-122" transform="translate(99.32 599.05)">text-102</text>
+
 
     <g id="Grigoris_name" data-name="Grigoris name">
       <path id="path19128" class="cls-123" d="M1394.43,851.72a10.81,10.81,0,0,1-4.55,2.78,19.77,19.77,0,0,1-6.57,1.06,11.7,11.7,0,0,1-8.77-3.36q-3.29-3.36-3.51-9.35l0-2.42a16.72,16.72,0,0,1,1.46-7.21,10.87,10.87,0,0,1,4.18-4.74,11.79,11.79,0,0,1,6.29-1.66c3.48,0,6.19.8,8.11,2.39a10.1,10.1,0,0,1,3.37,7.13h-6.49a5.3,5.3,0,0,0-1.5-3.34,4.82,4.82,0,0,0-3.26-1,4.41,4.41,0,0,0-3.92,2.15,11.45,11.45,0,0,0-1.4,6.14V842q0,4.18,1.43,6.29a5.05,5.05,0,0,0,4.5,2.1,5.69,5.69,0,0,0,3.92-1.17v-4.34H1383v-4.63h11.42v11.49Z" transform="translate(-65.14 -20)"/>
