--- a/pages/content/amp-dev/documentation/tutorial-h/888/106.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/106.md
@@ -549,11 +549,6 @@ components:
 
 <div class="article-body" itemprop="articleBody">
 
-<template
-     type="amp-mustache"
-       id="SVG-template"
->
-
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1775.6 962.31">
   <defs>
     <linearGradient id="linear-gradient" x1="1144.58" y1="-3599.59" x2="1189.36" y2="-3599.59" gradientTransform="matrix(0.66, -1.08, -0.81, -0.18, -1829.77, 409.38)" gradientUnits="userSpaceOnUse">
@@ -1291,8 +1286,8 @@ components:
   </g>
   <g id="Layer_Text" data-name="Layer Text">
 
-    <text class="cls-121" transform="translate(99.32 563.99)">text-101</text>
-    <text class="cls-122" transform="translate(99.32 599.05)">text-102</text>
+    <text class="cls-121" transform="translate(99.32 563.99)">Vlad</text>
+    <text class="cls-122" transform="translate(99.32 599.05)">dealer of Mozzarella, Italian</text>
 
 
     <g id="Grigoris_name" data-name="Grigoris name">
@@ -1732,32 +1727,7 @@ components:
   </g>
 </svg>
 
-</template>
-
 </div>
 </article>
 </body>
-
-<amp-list
-	template="SVG-template"
-	width="auto"
-	height="1"
-	layout="fixed-height"
-	src="amp-state:localState"
-	single-item
-	items="."
-	binding="no"
->
-<div
-	overflow
-	class="list-overflow"
->
-</div>
-<amp-state
-	id="localState"
-><script type="application/json">
-{"items":[{"101":"Vlad"},{"102":"dealer of Mozzarella, Italian"}]}
-</script>
-</amp-state>
-</amp-list>
 
