--- a/pages/content/amp-dev/documentation/tutorial-h/888/105.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/105.md
@@ -12,7 +12,7 @@ components:
 <head>
   <style amp-custom>
         amp-story-page {
-        height: 100%;
+        height: 2000px;
       }
         amp-story-page * {
         color: white;
