--- a/pages/content/amp-dev/documentation/tutorial-h/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/a101.md
@@ -1,11 +1,11 @@
 ---
 $title@: Introduction
+description@: 'Read the introduction'
 $titles:
-  teaser: Chapter 1
+  teaser@: Chapter 1
 teaser:
   icon: airplane
-  label: Introduction
-description@: 'Read the introduction'
+  label@: Introduction
 $order: 1
 tutorial: !g.yaml /shared/data/tutorial-p.yaml
 ---
