--- a/pages/content/amp-dev/documentation/tutorial-h/888/101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/101.md
@@ -1,12 +1,12 @@
 ---
 $title@: Components
+description@: testing components
 $titles:
-  teaser: Components
+  teaser@: Components
 $slug: 123456
 teaser:
   icon: airplane
-  label: Chapter 88
-description@: testing components
+  label@: Chapter 88
 $order: 1
 toc: true
 components:
@@ -17,7 +17,7 @@ components:
 
 ## toc: true
 
-### $slug fails
+### slug fails
 
 ### TODO add selectors
 
