--- a/pages/content/amp-dev/documentation/tutorial-h/888/106.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/106.md
@@ -1,8 +1,8 @@
 ---
-$title: pizza svg
-description: pizza svg
-$order: 6
+$title@: pizza svg
+description@: pizza svg
 toc: false
+$order: 6
 ---
 
 <head>
