--- a/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
@@ -1,10 +1,10 @@
 ---
 $title@: Tell a story
 description@: 'Tell a story'
-$order: 2
 teaser:
   text@: >-
     Immerse readers in visual and tappable stories they can share anywhere on the open web.
+$order: 2
 ---
 
 ## frontmatter substitution SUCCESS
@@ -22,4 +22,4 @@ teaser:
   <p>{{ _(doc.teaser.text) }}</p>
 </div>
 
-</details>
+</details
