--- a/pages/content/amp-dev/documentation/tutorial-h/102/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/102/a101.md
@@ -2,10 +2,10 @@
 $title@: Requirements and Protégé User Interface
 description@: 'Requirements and Protégé'
 $titles:
-  teaser: Chapter 2
+  teaser@: Chapter 2
 teaser:
   icon: airplane
-  label: Requirements
+  label@: Requirements
 $order: 1
 ---
 
