--- a/pages/content/amp-dev/documentation/tutorial-h/888/105.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/105.md
@@ -1,6 +1,6 @@
 ---
-$title: amp-story
-description: testing amp-story
+$title@: amp-story
+description@: testing amp-story
 toc: false
 $order: 5
 components:
@@ -12,7 +12,7 @@ components:
 <head>
   <style amp-custom>
         amp-story-page {
-        height: 3000px;
+        height: 2000px;
       }
         amp-story-page * {
         color: white;
