--- a/pages/content/amp-dev/documentation/tutorial-p/101/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/b102.md
@@ -1,7 +1,35 @@
 ---
-$title@: Conventions
+$title@: Organization
 description@: ''
-$order: 3
+$order: 2
+author: ldodds
+data: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
-Class, property, rule, and individual names are written in Consolas font like this.
+## YAML test
+
+{% for v in doc.data.item %}
+<h3 class="">{{ v.heading_1 | safe }}</h3>
+<p class="">{{ v.heading_2 | safe }}</p>
+<p class="">{{ v.text_1 | trim }}</p>
+<p class="">{{ v.text_2 | trim }}</p>
+<p class="">{{ v.text_3 | safe }}</p>
+{% endfor %}
+
+## links
+
+Here is my [Homepage][MichaelCurrin home] example 1
+
+[Here][MichaelCurrin home] is my example 2
+
+Here is my [Homepage][1] with a numbered reference.
+
+
+### reference links (not visible!)
+
+[MichaelCurrin home]: https://michaelcurrin.github.io/
+
+[1]: https://michaelcurrin.github.io/
+
+[Homepage]: https://michaelcurrin.github.io/
+
