--- a/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
@@ -1,14 +1,15 @@
 ---
 $title@: Introduction
 $titles:
-  teaser: Chapter 1
+  teaser@: Chapter 1
 teaser:
   icon: airplane
-  label: Introduction other
+  label@: Introduction other
 description@: 'Read the introduction'
 $order: 1
 formats:
   - websites
+author: ldodds
 data: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
