--- a/pages/content/amp-dev/documentation/tutorial-h/888/106.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/106.md
@@ -3,6 +3,9 @@ $title@: pizza svg
 description@: pizza svg
 toc: false
 $order: 6
+labels:
+  a@: Vlad
+  b@: 'dealer of Mozzarella, Italian'
 ---
 
 <head>
@@ -538,9 +541,7 @@ $order: 6
 </head>
 
 <body>
-<article>
-
-<div class="article-body" itemprop="articleBody">
+<div>
 
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1775.6 962.31">
   <defs>
@@ -610,7 +611,6 @@ $order: 6
       <stop offset="1" stop-color="#886230"/>
     </linearGradient>
   </defs>
-  <title>pizza-property-graph-original_Cleaned_3</title>
   <g id="Layer_1" data-name="Layer 1">
     <g id="Federico">
       <g id="g18210">
@@ -1279,8 +1279,8 @@ $order: 6
   </g>
   <g id="Layer_Text" data-name="Layer Text">
 
-    <text class="cls-121" transform="translate(99.32 563.99)">Vlad</text>
-    <text class="cls-122" transform="translate(99.32 599.05)">dealer of Mozzarella, Italian</text>
+    <text class="cls-121" transform="translate(99.32 563.99)">{{ _(doc.labels.a) }}</text>
+    <text class="cls-122" transform="translate(99.32 599.05)">{{ _(doc.labels.b) }}</text>
 
 
     <g id="Grigoris_name" data-name="Grigoris name">
@@ -1721,6 +1721,5 @@ $order: 6
 </svg>
 
 </div>
-</article>
 </body>
 
