--- a/pages/content/amp-dev/documentation/tutorial-h/888/106.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/106.md
@@ -4,8 +4,8 @@ description@: pizza svg
 toc: false
 $order: 6
 labels:
-  a@: Vlad
-  b@: 'dealer of Mozzarella, Italian'
+  - a@: Vlad
+  - b@: dealer of Mozzarella, Italian
 ---
 
 <head>
