--- a/pages/content/amp-dev/documentation/tutorial-h/888/106.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/106.md
@@ -4,8 +4,8 @@ description@: pizza svg
 toc: false
 $order: 6
 labels:
-  aaa: Vlad
-  bbb: dealer of Mozzarella, Italian
+  aaa@: Vlad
+  bbb@: dealer of Mozzarella, Italian
 ---
 
 <head>
@@ -1279,8 +1279,8 @@ labels:
   </g>
   <g id="Layer_Text" data-name="Layer Text">
 
-    <text class="cls-121" transform="translate(99.32 563.99)">{{ doc.labels.aaa) }}</text>
-    <text class="cls-122" transform="translate(99.32 599.05)">{{ doc.labels.bbb) }}</text>
+    <text class="cls-121" transform="translate(99.32 563.99)">{{ _(doc.labels.aaa) }}</text>
+    <text class="cls-122" transform="translate(99.32 599.05)">{{ _(doc.labels.bbb) }}</text>
 
 
     <g id="Grigoris_name" data-name="Grigoris name">
