--- a/pages/content/amp-dev/documentation/tutorial-h/888/105.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/105.md
@@ -6,19 +6,20 @@ $order: 5
 ---
 
 {% do doc.amp_dependencies.add('amp-story', '0.1') %}
-
 <head>
-  <style amp-custom>
-        amp-story-page * {
-        color: white;
-        text-align: center;
-      }
-      [template=thirds] {
-        padding: 0;
-      }
-    </style>
+<style amp-custom>
+body {
+    height: 80vh;
+}
+amp-story-page * {
+    color: white;
+    text-align: center;
+}
+[template=thirds] {
+    padding: 0;
+}
+</style>
 </head>
-
 <body>
    <amp-story standalone
       title="Stories in AMP - Hello World"
