--- a/pages/content/amp-dev/documentation/tutorial-h/888/107.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/107.md
@@ -2,14 +2,15 @@
 $title@: amp-story
 description@: testing amp-story
 toc: false
-$order: 5
+$order: 7
 ---
-
-{% do doc.amp_dependencies.add('amp-story', '0.1') %}
+[example preview="top-frame"
+         orientation="portrait"
+         playground="true"]
 <head>
 <style amp-custom>
 body {
-    height: 1600;
+    height: 60vh;
 }
 amp-story-page * {
     color: white;
@@ -97,3 +98,4 @@ amp-story-page * {
       </amp-story-page>
     </amp-story>
 </body>
+[/example]
