added chapter 4 to pizza tutorial

--- a/pages/content/amp-dev/documentation/tutorial-p/103/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/a101.md
@@ -1,12 +1,25 @@
 ---
-$title@: OWL Ontologies
-$titles:
-  teaser: Chapter 3
+$title@: 'OWL Ontologies'
+description@: 'What are OWL Ontologies?'
 teaser:
   icon: airplane
-  label: OWL Ontologies
-description@: 'What are OWL Ontologies?'
+  label: 'OWL Ontologies'
+$titles:
+  teaser: 'Chapter 3'
 $order: 1
 ---
 
 Ontologies are used to capture knowledge about some domain of interest.
+An ontology describes the concepts in the domain and also the relationships that hold between those concepts.
+Different ontology languages provide different facilities.
+The most recent development in standard ontology languages is OWL from the World Wide Web Consortium (W3C).
+A good primer on the basic concepts of OWL can be found at: https://www.w3.org/TR/owl2-primer/
+
+OWL makes it possible to describe concepts in an unambiguous manner based on set theory and logic.
+Complex concepts can be built up out of simpler concepts.
+The logical model allows the use of a reasoner which can check whether all of the statements and definitions in the ontology are mutually consistent and can also recognize which concepts fit under which definitions.
+The reasoner can therefore help to maintain the hierarchy correctly.
+This is particularly useful when dealing with cases where classes can have more than one parent.
+The reasoner can also infer additional information.
+For example, if two properties are inverses only one value needs to be asserted by the user and the inverse value will be automatically inferred by the reasoner.
+
