--- a/pages/content/amp-dev/documentation/tutorial-h/888/102.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/102.md
@@ -23,13 +23,22 @@ and here
 
 ### inline markup
 
+#### <mark>
+
 I need to highlight these <mark>very important words</mark>.
+
+#### double tics
 
 I need to highlight these ``very important words``.
 
+#### <code>
+
 I need to highlight these <code>very important words</code>.
 
+#### <pre>
+
 I need to highlight these <pre>very important words</pre>.
+
 
 
 ### g.doc /shared/data/hello-world.html
