--- a/pages/content/amp-dev/documentation/tutorial-p/103/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/a101.md
@@ -13,7 +13,7 @@ Ontologies are used to capture knowledge about some domain of interest.
 An ontology describes the concepts in the domain and also the relationships that hold between those concepts.
 Different ontology languages provide different facilities.
 The most recent development in standard ontology languages is OWL from the World Wide Web Consortium (W3C).
-A good primer on the basic concepts of OWL can be found at: https://www.w3.org/TR/owl2-primer/
+A good primer on the basic concepts of OWL can be found at: <a href="https://www.w3.org/TR/owl2-primer/" target="_blank" rel="noopener noreferrer">https://www.w3.org/TR/owl2-primer/</a>
 
 OWL makes it possible to describe concepts in an unambiguous manner based on set theory and logic.
 Complex concepts can be built up out of simpler concepts.
