--- a/pages/content/amp-dev/documentation/tutorial-p/103/b103.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b103.md
@@ -1,6 +1,7 @@
 ---
 $title@: 'Individuals'
 description@: ''
+toc: false
 $order: 3
 ---
 
@@ -14,13 +15,13 @@ In OWL, it must be explicitly stated that individuals are the same as each other
 Figure 3.1 shows a representation of some individuals in a domain of people, nations, and relations — in this tutorial we represent individuals as diamonds.
 
 
-{{ image('/static/img/tutorial-p/chapter-03/1-505x166.png', 505, 166, align='center third', caption='Figure 3.1: Representation of Individuals') }}
+{{ image('/static/img/tutorial-p/chapter-03/1-505x166.png', 505, 166, align='left', caption='Figure 3.1: Representation of Individuals') }}
 
-{{ image('/static/img/tutorial-p/chapter-03/2-370x186.png', 370, 186, align='center third', caption='Figure 3.2: Representation of Properties') }}
+{{ image('/static/img/tutorial-p/chapter-03/2-370x186.png', 370, 186, align='left', caption='Figure 3.2: Representation of Properties') }}
 
 <table><tr>
 <td>
-<svg version="1.0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 123" preserveAspectRatio="xMidYMid meet">
+<svg version="1.0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 123" height="96" width="123" preserveAspectRatio="xMidYMid meet">
 <g transform="translate(0.000000,123.000000) scale(0.100000,-0.100000)" fill="#009485" stroke="#009485">
 <path d="M60 620 l0 -510 385 0 385 0 0 373 0 372 -138 138 -137 137 -248 0 -247 0 0 -510z m480 350 l0 -130 130 0 130 0 0 -350 0 -350 -355 0 -355 0 0 480 0 480 225 0 225 0 0 -130z m135 0 l110 -110 -113 0 -112 0 0 110 c0 61 1 110 3 110 1 0 52 -49 112 -110z"/>
 <path d="M190 785 c0 -12 20 -15 120 -15 100 0 120 3 120 15 0 13 -20 15 -120 15 -100 0 -120 -2 -120 -15z"/>
