--- a/pages/content/amp-dev/documentation/tutorial-p/103/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/a101.md
@@ -3,9 +3,9 @@ $title@: 'OWL Ontologies'
 description@: 'What are OWL Ontologies?'
 teaser:
   icon: airplane
-  label: 'OWL Ontologies'
+  label@: 'OWL Ontologies'
 $titles:
-  teaser: 'Chapter 3'
+  teaser@: 'Chapter 3'
 $order: 1
 ---
 
