--- a/pages/content/amp-dev/documentation/tutorial-p/103/b104.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b104.md
@@ -18,7 +18,7 @@ These property characteristics are explained in detail in Section 4.8.
 Figure 3.2 shows a representation of some properties.
 
 <table><tr>
-<td>
+<td colspan="1" style="border: none;">
 <svg version="1.0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 123" height="96" width="123" preserveAspectRatio="xMidYMid meet">
 <g transform="translate(0.000000,123.000000) scale(0.100000,-0.100000)" fill="#009485" stroke="#009485">
 <path d="M60 620 l0 -510 385 0 385 0 0 373 0 372 -138 138 -137 137 -248 0 -247 0 0 -510z m480 350 l0 -130 130 0 130 0 0 -350 0 -350 -355 0 -355 0 0 480 0 480 225 0 225 0 0 -130z m135 0 l110 -110 -113 0 -112 0 0 110 c0 61 1 110 3 110 1 0 52 -49 112 -110z"/>
@@ -31,7 +31,7 @@ Figure 3.2 shows a representation of some properties.
 </g>
 </svg>
 </td>
-<td colspan="3" style="border: 1px solid;">
+<td colspan="5" style="border: 2px solid;">
 Properties are similar to properties in Object-Oriented Programming.
 However, there are important differences between properties in OWL and Object-Oriented Programming.
 The most important difference is that OWL properties are first class entities that exist independent of classes.
@@ -39,4 +39,4 @@ OOP developers are encouraged to read: <a href="https://www.w3.org/2001/sw/BestP
 </td>
 </tr></table>
 
-{{ image('/static/img/tutorial-p/chapter-03/3-665x330.png', 665, 330, align='left', caption='Figure 3.3: Representation of Classes containing Individuals') }}
+{{ image('/static/img/tutorial-p/chapter-03/3-665x330.png', 665, 330, align='', layout='intrinsic', caption='Figure 3.3: Representation of Classes containing Individuals') }}
