--- a/pages/content/amp-dev/documentation/tutorial-p/103/b105.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b105.md
@@ -9,7 +9,7 @@ $order: 5
 
 OWL classes are sets that contain individuals.
 They are described using formal (mathematical) descriptions that rigorously define the requirements for membership of the class.
-For example, the class Cat would contain all the individuals that are cats in our domain of interest. <i>[2]</i>
+For example, the class Cat would contain all the individuals that are cats in our domain of interest. [1]
 Classes may be organized into a superclass-subclass hierarchy, which is also known as a taxonomy.
 However, taxonomies are often trees, i.e., each node has only one parent node.
 Class hierarchies in OWL are not restricted to be trees and multiple inheritance can be a powerful tool to represent data in an intuitive manner.
@@ -24,7 +24,7 @@ Figure 3.3 shows a representation of some classes containing individuals – cla
 In OWL classes can be built up of descriptions that specify the conditions that must be satisfied by an individual for it to be a member of the class.
 How to formulate these descriptions will be explained as the tutorial progresses.
 
-<hr>
+---
 
-<i>[2]</i> Individuals can belong to more than one class and classes can have more than one superclass.
+[1] Individuals can belong to more than one class and classes can have more than one superclass.
 Unlike Object-Oriented Programming where multiple inheritance is typically unavailable or discouraged it is common in OWL.
