--- a/pages/content/amp-dev/documentation/tutorial-p/103/b105.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b105.md
@@ -24,7 +24,7 @@ Figure 3.3 shows a representation of some classes containing individuals – cla
 In OWL classes can be built up of descriptions that specify the conditions that must be satisfied by an individual for it to be a member of the class.
 How to formulate these descriptions will be explained as the tutorial progresses.
 
----
+<hr style="border-top: 3px double #8c8b8b;">
 
 [1] Individuals can belong to more than one class and classes can have more than one superclass.
 Unlike Object-Oriented Programming where multiple inheritance is typically unavailable or discouraged it is common in OWL.
