--- a/pages/content/amp-dev/documentation/tutorial-p/103/b104.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b104.md
@@ -39,4 +39,4 @@ OOP developers are encouraged to read: <a href="https://www.w3.org/2001/sw/BestP
 </td>
 </tr></table>
 
-{{ image('/static/img/tutorial-p/chapter-03/3-665x330.png', 665, 330, align='', layout='intrinsic', caption='Figure 3.3: Representation of Classes containing Individuals') }}
+{{ image('/static/img/tutorial-p/chapter-03/3-665x330.png', 665, 330, align='center', layout='intrinsic', caption='Figure 3.3: Representation of Classes containing Individuals') }}
