--- a/pages/content/amp-dev/documentation/tutorial-p/103/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b102.md
@@ -3,6 +3,8 @@ $title@: 'Components of OWL Ontologies'
 description@: ''
 toc: false
 $order: 2
+components:
+  - iframe
 ---
 
 ### Section 3.1
@@ -16,3 +18,10 @@ One of the benefits of Protégé is that it presents an intuitive GUI that enabl
 However, developers are encouraged to refresh their knowledge on logic and set theory.
 A good source is the first 3 chapters in Elements of the Theory of Computation by Lewis and Papadamitrious.
 
+<amp-iframe width="900" height="300"
+    sandbox="allow-scripts allow-same-origin"
+    layout="responsive"
+    src="https://css4.pub/2015/icelandic/dictionary.pdf">
+  <amp-img placeholder layout="fill"
+    src="https://ontomatica.io/static/image/oscars_placeholder_1.png"></amp-img>
+</amp-iframe>
