iframe and author

--- a/pages/content/amp-dev/documentation/tutorial-p/103/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b102.md
@@ -3,6 +3,7 @@ $title@: 'Components of OWL Ontologies'
 description@: ''
 toc: false
 $order: 2
+author: mdebellis
 components:
   - iframe
 ---
@@ -18,10 +19,11 @@ One of the benefits of Protégé is that it presents an intuitive GUI that enabl
 However, developers are encouraged to refresh their knowledge on logic and set theory.
 A good source is the first 3 chapters in Elements of the Theory of Computation by Lewis and Papadamitrious.
 
-<amp-iframe width="900" height="300"
-    sandbox="allow-scripts allow-same-origin"
-    layout="responsive"
-    src="https://css4.pub/2015/icelandic/dictionary.pdf">
+<div class="wrapper">
+  <h3>My AMP Tap iframe</h3>
+  <button type="button" on="tap:AMP.setState({ myIframeUrl: 'https://docs.google.com/gview?url=http%3A%2F%2Fwww.pdf995.com%2Fsamples%2Fpdf.pdf&embedded=true' })" [hidden]="myIframeUrl">Load my PDF iframe</button>
+  <amp-iframe sandbox="allow-scripts allow-same-origin" src="https://google.com/" width="1" height="1" layout="responsive" [src]="myIframeUrl" [hidden]="!myIframeUrl" hidden>
   <amp-img placeholder layout="fill"
-    src="https://ontomatica.io/static/image/oscars_placeholder_1.png"></amp-img>
-</amp-iframe>
+  src="https://ontomatica.io/static/image/oscars_placeholder_1.png"></amp-img>
+  </amp-iframe>
+</div>
