--- a/pages/content/amp-dev/documentation/tutorial-p/103/b103.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b103.md
@@ -3,6 +3,7 @@ $title@: 'Individuals'
 description@: ''
 toc: false
 $order: 3
+author: mdebellis
 ---
 
 ### Section 3.1.1
@@ -19,7 +20,7 @@ Figure 3.1 shows a representation of some individuals in a domain of people, nat
 
 {{ image('/static/img/tutorial-p/chapter-03/2-370x186.png', 370, 186, align='center', layout='intrinsic', caption='Figure 3.2: Representation of Properties') }}
 
-<table style="width:100%"><tr>
+<table style="width: 100%; height: 14px;"><tr>
 <td style="width:10%; border: none;">
 <svg version="1.0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 123" height="70%" width="70%" preserveAspectRatio="xMidYMid meet">
 <g transform="translate(0.000000,123.000000) scale(0.100000,-0.100000)" fill="#009485" stroke="#009485">
@@ -33,7 +34,7 @@ Figure 3.1 shows a representation of some individuals in a domain of people, nat
 </g>
 </svg>
 </td>
-<td style="width:90%; border: 1px solid; height: 14px;">
+<td style="width:90%; border: 1px solid;">
 Individuals are also known as instances.
 Individuals can be referred to as instances of classes.
 </td>
