--- a/pages/content/amp-dev/documentation/tutorial-p/103/b104.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b104.md
@@ -3,6 +3,7 @@ $title@: 'Properties'
 description@: ''
 toc: false
 $order: 4
+author: mdebellis
 ---
 
 ### Section 3.1.2
@@ -31,7 +32,7 @@ Figure 3.2 shows a representation of some properties.
 </g>
 </svg>
 </td>
-<td style="width:90%; border: 1px solid; padding: 14px 0;">
+<td style="width:90%; border: 1px solid; padding: 5px 0px 5px 5px;">
 Properties are similar to properties in Object-Oriented Programming.
 However, there are important differences between properties in OWL and Object-Oriented Programming.
 The most important difference is that OWL properties are first class entities that exist independent of classes.
