--- a/pages/content/amp-dev/documentation/tutorial-p/103/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/a101.md
@@ -7,6 +7,7 @@ teaser:
 $titles:
   teaser@: 'Chapter 3'
 $order: 1
+author: mdebellis
 ---
 
 Ontologies are used to capture knowledge about some domain of interest.
