--- a/pages/content/amp-dev/documentation/tutorial-p/103/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/a101.md
@@ -8,6 +8,7 @@ $titles:
   teaser@: 'Chapter 3'
 $order: 1
 author: mdebellis
+contributors: jaygray0919
 ---
 
 Ontologies are used to capture knowledge about some domain of interest.
