--- a/pages/content/amp-dev/documentation/tutorial-p/103/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b102.md
@@ -20,8 +20,9 @@ However, developers are encouraged to refresh their knowledge on logic and set t
 A good source is the first 3 chapters in Elements of the Theory of Computation by Lewis and Papadamitrious.
 
 <div class="wrapper">
+  <p>View document</p>
   <button type="button" on="tap:AMP.setState({ myIframeUrl: 'https://docs.google.com/gview?url=http%3A%2F%2Fwww.pdf995.com%2Fsamples%2Fpdf.pdf&embedded=true' })" [hidden]="myIframeUrl">
-  View "Elements of the Theory of Computation"
+  Elements of the Theory of Computation
   </button>
   <amp-iframe sandbox="allow-scripts allow-same-origin" src="https://google.com/" width="900" height="300" layout="responsive" [src]="myIframeUrl" [hidden]="!myIframeUrl" hidden>
     <amp-img placeholder layout="fill" src="https://ontomatica.io/static/image/oscars_placeholder_1.png"></amp-img>
