--- a/pages/content/amp-dev/documentation/tutorial-p/103/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/a101.md
@@ -8,7 +8,8 @@ $titles:
   teaser@: 'Chapter 3'
 $order: 1
 author: mdebellis
-contributors: jaygray0919
+contributors:
+  - jaygray0919
 ---
 
 Ontologies are used to capture knowledge about some domain of interest.
