--- a/pages/content/amp-dev/documentation/tutorial-p/103/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b102.md
@@ -27,4 +27,10 @@ A good source is the first 3 chapters in Elements of the Theory of Computation b
   <amp-iframe sandbox="allow-scripts allow-same-origin" src="https://google.com/" width="900" height="300" layout="responsive" [src]="myIframeUrl" [hidden]="!myIframeUrl" hidden>
     <amp-img placeholder layout="fill" src="https://ontomatica.io/static/image/oscars_placeholder_1.png"></amp-img>
   </amp-iframe>
+  <div class="ap-o-sampler-link">
+    <a href="https://afdsi.com/" [href]="sampler[activeSample].standaloneUrl" class="-n">
+    <div  class="ap-a-ico -i"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#internal"></use></svg></div>
+    <span class="-r">Open target page</span>
+    </a>
+  </div>
 </div>
