--- a/pages/content/amp-dev/documentation/tutorial-p/103/b103.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b103.md
@@ -34,7 +34,7 @@ Figure 3.1 shows a representation of some individuals in a domain of people, nat
 </g>
 </svg>
 </td>
-<td style="width:90%; border: 1px solid; height: 14px;">
+<td style="width:90%; border: 1px solid; padding: 2px 0px 2px 5px;">
 Individuals are also known as instances.
 Individuals can be referred to as instances of classes.
 </td>
