--- a/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
@@ -1,11 +1,11 @@
 ---
-$titles:
-  teaser@: Chapter 1
-teaser:
-  icon: airplane
-  label@: Introduction other
 $title@: Introduction
 description@: 'Read the introduction'
+teaser:
+  icon: airplane
+  label@: Introduction
+$titles:
+  teaser@: Chapter 1
 $order: 1
 formats:
   - websites
