--- a/pages/content/amp-dev/documentation/tutorial-h/888/102.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/102.md
@@ -23,7 +23,7 @@ and here
 
 ### inline markup
 
-#### <mark>
+#### mark
 
 I need to highlight these <mark>very important words</mark>.
 
@@ -31,11 +31,11 @@ I need to highlight these <mark>very important words</mark>.
 
 I need to highlight these ``very important words``.
 
-#### <code>
+#### code
 
 I need to highlight these <code>very important words</code>.
 
-#### <pre>
+#### pre (creates line-break)
 
 I need to highlight these <pre>very important words</pre>.
 
