--- a/pages/content/amp-dev/documentation/tutorial-p/103/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b102.md
@@ -20,7 +20,7 @@ However, developers are encouraged to refresh their knowledge on logic and set t
 A good source is the first 3 chapters in Elements of the Theory of Computation by Lewis and Papadamitrious.
 
 <div class="wrapper">
-  <p>View document</p>
+  <p>Preview document</p>
   <button type="button" on="tap:AMP.setState({ myIframeUrl: 'https://docs.google.com/gview?url=http%3A%2F%2Fwww.pdf995.com%2Fsamples%2Fpdf.pdf&embedded=true' })" [hidden]="myIframeUrl">
   Elements of the Theory of Computation
   </button>
@@ -28,8 +28,8 @@ A good source is the first 3 chapters in Elements of the Theory of Computation b
     <amp-img placeholder layout="fill" src="https://ontomatica.io/static/image/oscars_placeholder_1.png"></amp-img>
   </amp-iframe>
   <div class="ap-o-sampler-link">
-    <a href="https://afdsi.com/" [href]="sampler[activeSample].standaloneUrl" class="-n">
-    <div  class="ap-a-ico -i"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#internal"></use></svg></div>
+    <a href="https://www.pdf995.com/samples/pdf.pdf" class="-n">
+    <div class="ap-a-ico -i"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#internal"></use></svg></div>
     <span class="-r">Open target page</span>
     </a>
   </div>
