--- a/pages/content/amp-dev/documentation/tutorial-p/103/b104.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b104.md
@@ -22,7 +22,8 @@ Figure 3.2 shows a representation of some properties.
 
 <table style="width:100%"><tr>
 <td style="width: 10%; border: none;">
-<svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#pizza-vocab"></use></svg>
+{% do doc.icons.useIcon('/icons/pizza-vocab.svg') %}
+<svg width="80%" height="80%"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#pizza-vocab"></use></svg>
 </td>
 <td style="width: 90%; border: 1px solid;">
 Properties are similar to properties in Object-Oriented Programming.
