--- a/pages/content/amp-dev/documentation/tutorial-p/103/b104.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b104.md
@@ -20,10 +20,9 @@ They can also be transitive or symmetric.
 These property characteristics are explained in detail in Section 4.8.
 Figure 3.2 shows a representation of some properties.
 
-<table style="width:100%"><tr>
+<table style="width: 100%"><tr>
 <td style="width: 10%; border: none;">
-{% do doc.icons.useIcon('/icons/pizza-vocab.svg') %}
-<svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#pizza-vocab"></use></svg>
+{{ image('/static/img/pizza/vocab-96x123.svg', 96, 123, layout='intrinsic', alt='') }}
 </td>
 <td style="width: 90%; border: 1px solid;">
 Properties are similar to properties in Object-Oriented Programming.
