--- a/pages/content/amp-dev/documentation/tutorial-p/103/b103.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b103.md
@@ -25,17 +25,8 @@ Figure 3.1 shows a representation of some individuals in a domain of people, nat
 <table style="width: 100%;">
 <tr>
 <td style="width: 10%; border: none;">
-<svg version="1.0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 123" height="80%" width="80%" preserveAspectRatio="xMidYMid meet">
-<g transform="translate(0.000000,123.000000) scale(0.100000,-0.100000)" fill="#009485" stroke="#009485">
-<path d="M60 620 l0 -510 385 0 385 0 0 373 0 372 -138 138 -137 137 -248 0 -247 0 0 -510z m480 350 l0 -130 130 0 130 0 0 -350 0 -350 -355 0 -355 0 0 480 0 480 225 0 225 0 0 -130z m135 0 l110 -110 -113 0 -112 0 0 110 c0 61 1 110 3 110 1 0 52 -49 112 -110z"/>
-<path d="M190 785 c0 -12 20 -15 120 -15 100 0 120 3 120 15 0 13 -20 15 -120 15 -100 0 -120 -2 -120 -15z"/>
-<path d="M190 685 c0 -13 35 -15 255 -15 220 0 255 2 255 15 0 13 -35 15 -255 15 -220 0 -255 -2 -255 -15z"/>
-<path d="M190 580 c0 -6 92 -10 255 -10 163 0 255 4 255 10 0 6 -92 10 -255 10 -163 0 -255 -4 -255 -10z"/>
-<path d="M190 480 c0 -6 92 -10 255 -10 163 0 255 4 255 10 0 6 -92 10 -255 10 -163 0 -255 -4 -255 -10z"/>
-<path d="M190 380 c0 -6 92 -10 255 -10 163 0 255 4 255 10 0 6 -92 10 -255 10 -163 0 -255 -4 -255 -10z"/>
-<path d="M192 278 c4 -10 66 -14 256 -16 220 -2 252 0 252 13 0 13 -34 15 -256 15 -200 0 -255 -3 -252 -12z"/>
-</g>
-</svg>
+{% do doc.icons.useIcon('/icons/pizza-vocab.svg') %}
+<svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#pizza-vocab"></use></svg>
 </td>
 <td style="width: 90%; border: 1px solid; height: 18px;">
 Individuals are also known as instances.
